--- a/app/views/home/home.phtml
+++ b/app/views/home/home.phtml
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Gamping.com</title>
+<title>Gamping.com - <?= $this->title ?></title>
 </head>
 <body>
-	<p><?= $this->data; ?>
+	<p><?= $this->data ?>
 </body>
 </html>
