--- a/app/views/home/home.phtml
+++ b/app/views/home/home.phtml
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Gamping.com - <?= $this->title ?></title>
-</head>
-<body>
-	<p><?= $this->data ?>
-</body>
-</html>
+<?= $this->data ?>
