Stuff for the host place submission form page

--- a/public/style/layout.less
+++ b/public/style/layout.less
@@ -95,6 +95,16 @@ header#header{
     margin-top:2 * @SPACER;
 }
 
+.sidebar{
+    padding-top:2 * @SPACER;
+    .widget{
+        margin-bottom:2 * @SPACER;
+        h2{
+            margin-left:@SPACER;
+        }
+    }
+}
+
 #press{
     padding:@SPACER;
     img{
