--- a/public/style/style.less
+++ b/public/style/style.less
@@ -36,12 +36,13 @@
 /* LAYOUT ====================================================================*/
 @import "./type.less";
 
+
 @SPACER:15px;
 
 @import "./layout.less";
 @import "@{PAGES_PATH}/homepage.less";
 @import "@{PAGES_PATH}/add.less";
-
+@import "@{PAGES_PATH}/search.less";
 
 .hostcard{
     @SIZE:54px;
@@ -79,7 +80,6 @@
     .h1{
         padding-left:@SPACER;
     }
-
 }
 .testimonial{
     padding-left:@SPACER;
@@ -163,73 +163,87 @@
     fieldset{
         border-bottom:1px solid @GREY_LIGHT;
         padding:2*@SPACER @SPACER;
-        h2{
-           margin-bottom:@SPACER;
-           clear:both;
-        }
-        @H:36px;
-        select{
-            clear:both;
-            margin:@SPACER 0;
-            float:left;
+    }
+    h2{
+       margin-bottom:@SPACER;
+       clear:both;
+    }
+    @H:36px;
+    select{
+        clear:both;
+        margin:@SPACER 0;
+        float:left;
+        height:@H;
+        line-height:@H;
+        border:1px solid @BROWN_LIGHT;
+        #gradient.vertical(lighten(@BROWN_LIGHT, 5%), @BROWN_LIGHT, 0%, 100%);
+        border:1px solid darken(@BROWN_LIGHT, 5%);
+        .border-radius(3px);
+        .box-shadow(0px 1px 1px rgba(0, 0, 0, .1));
+        .font(special);
+        font-size:1.4em;
+        width:300px;
+        option{
             height:@H;
             line-height:@H;
-            border:1px solid @BROWN_LIGHT;
-            #gradient.vertical(lighten(@BROWN_LIGHT, 5%), @BROWN_LIGHT, 0%, 100%);
-            border:1px solid darken(@BROWN_LIGHT, 5%);
-            .border-radius(3px);
-            .box-shadow(0px 1px 1px rgba(0, 0, 0, .1));
-            .font(special);
-            font-size:1.4em;
-            width:300px;
-            option{
-                height:@H;
-                line-height:@H;
-            }
         }
-        input[type="text"], input[type="number"] {
-            border:1px solid @GREY;
-            .box-shadow(0px 1px 1px rgba(0, 0, 0, .1));
-            .border-radius(3px);
-            height:@H;
-            line-height:@H;
+    }
+    input[type="text"], input[type="number"] {
+        border:1px solid @GREY;
+        .box-shadow(0px 1px 1px rgba(0, 0, 0, .1));
+        .border-radius(3px);
+        height:@H;
+        line-height:@H;
+        margin-bottom:@SPACER;
+        padding-left:.5em;
+        padding-right:.5em;
+        &.long{
+            display:block;
+            width:90%;
+        }
+        &.small{
+            width:20%;
+        }
+    }
+    input[type="number"]{
+        text-align:right;
+    }
+    input.submit{
+        .butonize(all);
+        .butonize(green);
+    }
+    label{
+        &.inline{
             margin-bottom:@SPACER;
-            padding-left:.5em;
-            padding-right:.5em;
-            &.long{
-                display:block;
-                width:90%;
-            }
-            &.small{
-                width:20%;
+            height:@H;
+            line-height:@H;
+            input, select{
+                margin-right:.5em;
             }
         }
-        input[type="number"]{
-            text-align:right;
+        &.block{
+            display:block;
         }
-
-        label{
-            &.inline{
-                margin-bottom:@SPACER;
-                height:@H;
-                line-height:@H;
-                input, select{
-                    margin-right:.5em;
-                }
-            }
-            &.block{
-                display:block;
-            }
-        }
-        ul.checkboxlist{
-            list-style-type:none;
+    }
+    ul.checkboxlist{
+        list-style-type:none;
+        padding-left:0;
+        li{
             padding-left:0;
-            li{
-                padding-left:0;
-                input[type="checkbox"] {
-                    margin-right:.3em;
-                }
+            input[type="checkbox"] {
+                margin-right:.3em;
             }
+        }
+    }
+    .button-row{
+        clear:both;
+        text-align:center;
+        padding:@SPACER;
+        .submit{
+            .font(special);
+            font-size:1.8em;
+            padding-left:1em;
+            padding-right:1em;
         }
     }
 }
