--- a/public/style/fonts/fontello/css/gamping.css
+++ b/public/style/fonts/fontello/css/gamping.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'gamping';
-  src: url('../font/gamping.eot?55825761');
-  src: url('../font/gamping.eot?55825761#iefix') format('embedded-opentype'),
-       url('../font/gamping.woff?55825761') format('woff'),
-       url('../font/gamping.ttf?55825761') format('truetype'),
-       url('../font/gamping.svg?55825761#gamping') format('svg');
+  src: url('../font/gamping.eot?8408750');
+  src: url('../font/gamping.eot?8408750#iefix') format('embedded-opentype'),
+       url('../font/gamping.woff?8408750') format('woff'),
+       url('../font/gamping.ttf?8408750') format('truetype'),
+       url('../font/gamping.svg?8408750#gamping') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'gamping';
-    src: url('../font/gamping.svg?55825761#gamping') format('svg');
+    src: url('../font/gamping.svg?8408750#gamping') format('svg');
   }
 }
 */
@@ -53,5 +53,6 @@
 .icon-user:before { content: '\e800'; } /* '' */
 .icon-left-open:before { content: '\e802'; } /* '' */
 .icon-right-open:before { content: '\e801'; } /* '' */
+.icon-zoom-in:before { content: '\e805'; } /* '' */
 .icon-left-open-1:before { content: '\e804'; } /* '' */
 .icon-right-open-1:before { content: '\e803'; } /* '' */
