--- a/public/style/style.less
+++ b/public/style/style.less
@@ -247,3 +247,14 @@
         }
     }
 }
+
+@font-face {
+    font-family: 'gamping';
+    src:    url('fonts/fontello/font/gamping.eot');
+    src:    url('fonts/fontello/font/gamping.eot#iefix') format('embedded-opentype'),
+            url('fonts/fontello/font/gamping.woff') format('woff'),
+            url('fonts/fontello/font/gamping.ttf') format('truetype'),
+            url('fonts/fontello/font/gamping.svg#gamping') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
