--- a/public/style/pages/homepage.less
+++ b/public/style/pages/homepage.less
@@ -121,9 +121,7 @@ body.homepage{
         background: #FFF;
         cursor: default;
         overflow: auto;
-        -webkit-box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64);
-        -moz-box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64);
-        box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64);
+        .box-shadow(1px 4px 3px rgba(50, 50, 50, 0.64));
     }
     .autocomplete-suggestion {
         padding: 2px 5px;
