--- a/public/style/style.less
+++ b/public/style/style.less
@@ -18,15 +18,10 @@
 @import "@{BOOTSTRAP_PATH}/print.less";
 
 @import "@{BOOTSTRAP_PATH}/scaffolding.less";
-// @import "@{BOOTSTRAP_PATH}/type.less";
-// @import "@{BOOTSTRAP_PATH}/buttons.less";
 @import "@{BOOTSTRAP_PATH}/grid.less";
 @import "@{BOOTSTRAP_PATH}/forms.less";
 @import "@{BOOTSTRAP_PATH}/utilities.less";
 @import "@{BOOTSTRAP_PATH}/responsive-utilities.less";
-
-/* FONTELLO ===*/
-
 
 /* CUSTOM LIBS ===============================================================*/
 @import "@{LIB_PATH}/fonts.less";
@@ -36,217 +31,18 @@
 /* LAYOUT ====================================================================*/
 @import "./type.less";
 
-
+// Spacer between element. Here 15px, half of the grid gutter set in bootstrap grid
 @SPACER:15px;
 
 @import "./layout.less";
+
+/* THE PAGES =================================================================*/
 @import "@{PAGES_PATH}/homepage.less";
 @import "@{PAGES_PATH}/add.less";
 @import "@{PAGES_PATH}/search.less";
 
-.hostcard{
-    @SIZE:54px;
-    border:1px solid @GREY;
-    background:@GREY_LIGHT;
-    .border-radius(3px);
-    .h4{
-        padding-top:@SPACER/2;
-        margin-bottom:0!important;
-        a{
-            color:@BROWN;
-            &:hover{
-                color:@GREEN;
-            }
-        }
-    }
-    img{
-        border:1px solid @GREY;
-        width:@SIZE;
-        height:@SIZE;
-        .border-radius(@SIZE);
-        margin-top:10px;
-        float:left;
-        margin-right:@SPACER;
-        margin-left:@SPACER;
-        &:hover{}
-    }
-    p{
-        margin-top:0;
-    }
-}
-
-.testimonial-list {
-    border-left:1px solid @GREY_LIGHT;
-    .h1{
-        padding-left:@SPACER;
-    }
-}
-.testimonial{
-    padding-left:@SPACER;
-    @SIZE:80px;
-    @COLOR:@GREEN;
-    img{
-        background:@GREEN;
-        width:@SIZE;
-        height:@SIZE;
-        .border-radius(@SIZE);
-        margin-top:10px;
-        border:2px solid @COLOR;
-    }
-    .h3{
-        margin-bottom:.2em;
-        padding-bottom:.2em;
-        border-bottom:2px solid @COLOR;
-    }
-    q{
-        display:block;
-    }
-    &.img-left{
-        img{
-            margin-right:@SPACER;
-            float:left;
-        }
-        q{
-            margin-left:@SIZE + @SPACER;
-        }
-    }
-    &.img-right{
-        img{
-            margin-left:@SPACER;
-            float:right;
-        }
-        q{
-            margin-right:@SIZE + @SPACER;
-        }
-    }
-    &.nopadding{
-        h3{
-            border:none;
-        }
-        q{
-            margin-left:0;
-        }
-    }
-}
-
-.reason{
-    .h1{
-        text-aign:center;
-    }
-    .l{
-        background-position: right 10px;
-        background-repeat: no-repeat;
-        min-height:50px;
-    }
-    &.reason-1 .l{background-image:url("@{IMAGE_PATH}/reasons/ico_reason1.gif");}
-    &.reason-2 .l{background-image:url("@{IMAGE_PATH}/reasons/ico_reason2.gif");}
-    &.reason-3 .l{background-image:url("@{IMAGE_PATH}/reasons/ico_reason3.gif");}
-    &.reason-4 .l{background-image:url("@{IMAGE_PATH}/reasons/ico_reason4.gif");}
-    &.reason-5 .l{background-image:url("@{IMAGE_PATH}/reasons/ico_reason5.gif");}
-    &.reason-6 .l{background-image:url("@{IMAGE_PATH}/reasons/ico_reason6.gif");}
-    &.reason-7 .l{background-image:url("@{IMAGE_PATH}/reasons/ico_reason7.gif");}
-    &.reason-8 .l{background-image:url("@{IMAGE_PATH}/reasons/ico_reason8.gif");}
-    &.reason-9 .l{background-image:url("@{IMAGE_PATH}/reasons/ico_reason9.gif");}
-}
-
-
-.smart-form{
-    .error{
-        border:1px solid @RED;
-        background:lighten(@RED, 30%);
-        margin:@SPACER 0;
-        padding:@SPACER/2;
-        .border-radius(3px);
-        color:@RED;
-        .font(sans);
-    }
-    fieldset{
-        border-bottom:1px solid @GREY_LIGHT;
-        padding:2*@SPACER @SPACER;
-    }
-    h2{
-       margin-bottom:@SPACER;
-       clear:both;
-    }
-    @H:36px;
-    select{
-        clear:both;
-        margin:@SPACER 0;
-        float:left;
-        height:@H;
-        line-height:@H;
-        border:1px solid @BROWN_LIGHT;
-        #gradient.vertical(lighten(@BROWN_LIGHT, 5%), @BROWN_LIGHT, 0%, 100%);
-        border:1px solid darken(@BROWN_LIGHT, 5%);
-        .border-radius(3px);
-        .box-shadow(0px 1px 1px rgba(0, 0, 0, .1));
-        .font(special);
-        font-size:1.4em;
-        width:300px;
-        option{
-            height:@H;
-            line-height:@H;
-        }
-    }
-    input[type="text"], input[type="number"] {
-        border:1px solid @GREY;
-        .box-shadow(0px 1px 1px rgba(0, 0, 0, .1));
-        .border-radius(3px);
-        height:@H;
-        line-height:@H;
-        margin-bottom:@SPACER;
-        padding-left:.5em;
-        padding-right:.5em;
-        &.long{
-            display:block;
-            width:90%;
-        }
-        &.small{
-            width:20%;
-        }
-    }
-    input[type="number"]{
-        text-align:right;
-    }
-    input.submit{
-        .butonize(all);
-        .butonize(green);
-    }
-    label{
-        &.inline{
-            margin-bottom:@SPACER;
-            height:@H;
-            line-height:@H;
-            input, select{
-                margin-right:.5em;
-            }
-        }
-        &.block{
-            display:block;
-        }
-    }
-    ul.checkboxlist{
-        list-style-type:none;
-        padding-left:0;
-        li{
-            padding-left:0;
-            input[type="checkbox"] {
-                margin-right:.3em;
-            }
-        }
-    }
-    .button-row{
-        clear:both;
-        text-align:center;
-        padding:@SPACER;
-        .submit{
-            .font(special);
-            font-size:1.8em;
-            padding-left:1em;
-            padding-right:1em;
-        }
-    }
-}
+@import "./forms.less";
+@import "./common-elements.less";
 
 @font-face {
     font-family: 'gamping';
