Almost finished search map

--- a/app/views/form/form.phtml
+++ b/app/views/form/form.phtml
@@ -4,7 +4,7 @@
 
         <h1 class="h1">Proposez votre terrain en 1 minute. (gratuit)</h1>
 
-        <form action="#" class="smart-form row" method="post">
+        <form action="?" class="smart-form row" method="post">
             <div>
                 <fieldset class="who col-md-6">
                     <h2 class="h2">Qui voulez vous recevoir ?</h2>
@@ -288,6 +288,9 @@
                     </div>
                 </div>
             </fieldset>
+           <div class="button-row">
+                <button type="submit" name="submit" value="true" class="submit">Envoyer !</button>
+            </div>
         </form>
     </div>
     <div class="col-md-3 sidebar">
