--- a/app/views/form/form.phtml
+++ b/app/views/form/form.phtml
@@ -20,39 +20,32 @@
                     </div>
 
                     <select name="count">
-                        <option value="1"><?= t('1 personne'); ?></option>
-                        <option value="2"><?= t('2 personnes'); ?></option>
-                        <!-- aller jusqu'à 10 -->
+                        <option value="1"><?= '1' . ' ' . t('personne'); ?></option>
+                        <?php
+                        for ($i=1; $i <= 20; $i++) {
+                            ?>
+                            <option value="<?= $i; ?>"><?= $i . ' ' . t('personnes'); ?></option>
+                            <?php
+                        }
+                        ?>
                     </select>
                 </fieldset>
 
                 <fieldset class="situation col-md-6">
                     <h2 class="h2"><?= t('Situation'); ?></h2>
                     <ul class="checkboxlist">
-                        <li>
-                            <label for="situation_sea">
-                                <input type="checkbox" name="situation_sea" id="situation_sea" />
-                                Mer
-                            </label>
-                        </li>
-                        <li>
-                            <label for="situation_sea">
-                                <input type="checkbox" name="situation_sea" id="situation_sea" />
-                                Ville
-                            </label>
-                        </li>
-                        <li>
-                            <label for="situation_sea">
-                                <input type="checkbox" name="situation_sea" id="situation_sea" />
-                                Montagne
-                            </label>
-                        </li>
-                        <li>
-                            <label for="situation_sea">
-                                <input type="checkbox" name="situation_sea" id="situation_sea" />
-                                Campagne
-                            </label>
-                        </li>
+                        <?php
+                        foreach($this->situationGeos as $situationGeo) {
+                            ?>
+                            <li>
+                                <label for="situation<?= $situationGeo->getId(); ?>">
+                                    <input type="checkbox" name="situation_geo[]" id="situation<?= $situationGeo->getId(); ?>" value="<?= $situationGeo->getId(); ?>"/>
+                                    <?= $situationGeo->getName(); ?>
+                                </label>
+                            </li>
+                            <?php
+                        }
+                        ?>
                     </ul>
                 </fieldset>
             </div>
@@ -90,7 +83,7 @@
                                     ?>
                                     <li>
                                         <label for="commodity<?= $commodity->getId(); ?>">
-                                            <input type="checkbox" name="commodities" id="commodity<?= $commodity->getId(); ?>" value="<?= $commodity->getId(); ?>" />
+                                            <input type="checkbox" name="commodities[]" id="commodity<?= $commodity->getId(); ?>" value="<?= $commodity->getId(); ?>" />
                                             <?= $commodity->getName(); ?>
                                         </label>
                                     </li>
@@ -139,7 +132,7 @@
                                     ?>
                                     <li>
                                         <label for="activity<?= $activity->getId(); ?>">
-                                            <input type="checkbox" name="activities" id="activity<?= $activity->getId(); ?>" value="<?= $activity->getId(); ?>" />
+                                            <input type="checkbox" name="activities[]" id="activity<?= $activity->getId(); ?>" value="<?= $activity->getId(); ?>" />
                                             <?= $activity->getName(); ?>
                                         </label>
                                     </li>
@@ -171,9 +164,24 @@
                     <div class="col-md-12">
                         <label for="currency" class="block"><?= t('Devise :'); ?></label>
                         <select name="currency" id="currency">
-                            <option value="eur">&euro; <?= t('Euros'); ?></option>
-                            <option value="dol">&#36; <?= t('Dollar'); ?></option>
+                            <?php
+                            foreach($this->currencies as $currency) {
+                                ?>
+                                <option value="<?= $currency->getId(); ?>"><?= $currency->getHtml() . ' ' . $currency->getName() ?></option>
+                                <?php
+                            }
+                            ?>
                         </select>
+                    </div>
+                </div>
+            </fieldset>
+
+            <fieldset class="more-infos col-md-12">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="h2"><?= t('Parlez-nous de votre terrain.'); ?></h2>
+                        <textarea name="description" placeholder="<?= t('Décrivez votre terrain pour vos futurs campeurs...'); ?>"></textarea>
+                        <textarea name="rules" placeholder="<?= t('Listez ici les règles que les campeurs devront respecter...'); ?>"></textarea>
                     </div>
                 </div>
             </fieldset>
@@ -202,8 +210,8 @@
                         </select>
                     </div>
                     <div class="col-md-12">
-                        <input type="text" name="address" id="address" placeholder="<?= t('Adresse'); ?>" class="long" />
-                        <input type="text" name="address" id="address" placeholder="<?= t('Adresse (suite - optionnel)'); ?>" class="long" />
+                        <input type="text" name="address1" id="address1" placeholder="<?= t('Adresse'); ?>" class="long" />
+                        <input type="text" name="address2" id="address2" placeholder="<?= t('Adresse (suite - optionnel)'); ?>" class="long" />
                         <input type="text" name="zip" id="zip" placeholder="<?= t('Code postal'); ?>" class="small" />
                         <input type="text" name="city" id="city" placeholder="<?= t('Ville'); ?>" class="small" />
                     </div>
