--- a/public/style/pages/add.less
+++ b/public/style/pages/add.less
@@ -1,5 +1,10 @@
 .smart-form{
     fieldset{
+        &.more-info {
+            h2{
+                background-image:url(http://www.gamping.com/wp-content/themes/camping/images/ico_property.gif);
+            }
+        }
         &.who{
             h2{
                 background-image:url(http://www.gamping.com/wp-content/themes/camping/images/ico_who.gif);
