Title input field in add form

--- a/app/views/form/form.phtml
+++ b/app/views/form/form.phtml
@@ -180,6 +180,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2 class="h2"><?= t('Parlez-nous de votre terrain.'); ?></h2>
+
+                        <input type="text" name="title" class="long" placeholder="<?= t('Titre de votre annonce') ?>" />
                         <textarea name="description" placeholder="<?= t('Décrivez votre terrain pour vos futurs campeurs...'); ?>"></textarea>
                         <textarea name="rules" placeholder="<?= t('Listez ici les règles que les campeurs devront respecter...'); ?>"></textarea>
                     </div>
