--- a/app/views/form/form.phtml
+++ b/app/views/form/form.phtml
@@ -1,3 +1,12 @@
+<?php
+function get($dataContainer, $key) {
+    return isset($dataContainer[$key]) ? $dataContainer[$key] : null;
+};
+
+$data = $this->formData;
+var_dump($this->formData);
+
+?>
 <div class="container">
 
     <div id="content" class="col-md-9">
@@ -10,13 +19,13 @@
                     <h2 class="h2"><?= t('Qui voulez vous recevoir ?'); ?></h2>
                     <div data-form-choices="multiple">
                         <ul class="hosting_type">
-                            <li class="tent"><a href="#" data-name="hosting_tent"><?= t('Tente'); ?></a></li>
-                            <li class="caravan"><a href="#" data-name="hosting_caravan"><?= t('Caravan'); ?></a></li>
-                            <li class="campingcar"><a href="#" data-name="hosting_campingcar"><?= t('Camping car'); ?></a></li>
+                            <li class="tent"><a href="#" data-name="hosting_tent" <?= get($data, 'hosting_tent') == 1 ? 'class="selected"' : '' ?>><?= t('Tente'); ?></a></li>
+                            <li class="caravan"><a href="#" data-name="hosting_caravan" <?= get($data, 'hosting_caravan') == 1 ? 'class="selected"' : '' ?>><?= t('Caravan'); ?></a></li>
+                            <li class="campingcar"><a href="#" data-name="hosting_campingcar" <?= get($data, 'hosting_campingcar') == 1 ? 'class="selected"' : '' ?>><?= t('Camping car'); ?></a></li>
                         </ul>
-                        <input type="hidden" name="hosting_tent" value="0" />
-                        <input type="hidden" name="hosting_caravan" value="0" />
-                        <input type="hidden" name="hosting_campingcar" value="0" />
+                        <input type="hidden" name="hosting_tent" value="<?= get($data, 'hosting_tent') == 1 ? 1 : 0 ?>" />
+                        <input type="hidden" name="hosting_caravan" value="<?= get($data, 'hosting_tent') == 1 ? 1 : 0 ?>" />
+                        <input type="hidden" name="hosting_campingcar" value="<?= get($data, 'hosting_tent') == 1 ? 1 : 0 ?>" />
                     </div>
 
                     <select name="count">
@@ -24,7 +33,7 @@
                         <?php
                         for ($i=1; $i <= 20; $i++) {
                             ?>
-                            <option value="<?= $i; ?>"><?= $i . ' ' . t('personnes'); ?></option>
+                            <option value="<?= $i; ?>" <?= get($data, 'count') == $i ? 'selected="selected"' : '' ?>><?= $i . ' ' . t('personnes'); ?></option>
                             <?php
                         }
                         ?>
@@ -36,10 +45,17 @@
                     <ul class="checkboxlist">
                         <?php
                         foreach($this->situationGeos as $situationGeo) {
+                            $situationList = get($data, 'situation_geo');
+                            if (is_array($situationList) && in_array($situationGeo->getId(), $situationList)) {
+                                $checked = 'checked="checked"';
+                            }
+                            else {
+                                $checked = '';
+                            }
                             ?>
                             <li>
                                 <label for="situation<?= $situationGeo->getId(); ?>">
-                                    <input type="checkbox" name="situation_geo[]" id="situation<?= $situationGeo->getId(); ?>" value="<?= $situationGeo->getId(); ?>"/>
+                                    <input type="checkbox" name="situation_geo[]" id="situation<?= $situationGeo->getId(); ?>" value="<?= $situationGeo->getId(); ?>" <?= $checked ?>/>
                                     <?= $situationGeo->getName(); ?>
                                 </label>
                             </li>
@@ -80,10 +96,17 @@
                             <ul class="checkboxlist">
                                 <?php
                                 foreach($commoditiesInPack as $commodity) {
+                                    $list = get($data, 'commodities');
+                                    if (is_array($list) && in_array($commodity->getId(), $list)) {
+                                        $checked = 'checked="checked"';
+                                    }
+                                    else {
+                                        $checked = '';
+                                    }
                                     ?>
                                     <li>
                                         <label for="commodity<?= $commodity->getId(); ?>">
-                                            <input type="checkbox" name="commodities[]" id="commodity<?= $commodity->getId(); ?>" value="<?= $commodity->getId(); ?>" />
+                                            <input type="checkbox" name="commodities[]" id="commodity<?= $commodity->getId(); ?>" value="<?= $commodity->getId(); ?>" <?= $checked ?> />
                                             <?= $commodity->getName(); ?>
                                         </label>
                                     </li>
@@ -129,10 +152,17 @@
                             <ul class="checkboxlist">
                                 <?php
                                 foreach($activitiesInPack as $activity) {
+                                    $list = get($data, 'activities');
+                                    if (is_array($list) && in_array($activity->getId(), $list)) {
+                                        $checked = 'checked="checked"';
+                                    }
+                                    else {
+                                        $checked = '';
+                                    }
                                     ?>
                                     <li>
                                         <label for="activity<?= $activity->getId(); ?>">
-                                            <input type="checkbox" name="activities[]" id="activity<?= $activity->getId(); ?>" value="<?= $activity->getId(); ?>" />
+                                            <input type="checkbox" name="activities[]" id="activity<?= $activity->getId(); ?>" value="<?= $activity->getId(); ?>" <?= $checked ?> />
                                             <?= $activity->getName(); ?>
                                         </label>
                                     </li>
