home page search countries

--- a/app/views/home/home.phtml
+++ b/app/views/home/home.phtml
@@ -1,3 +1,4 @@
+
 <div id="banner" data-backstretch-image="/images/gamping.jpg">
     <div class="container">
         <div class="row">
@@ -7,124 +8,11 @@
                 </label>
                 <form method="get" action="#" id="searchform">
                     <input type="text" id="place" name="place" placeholder="Où allez vous ?" class="form-control" />
-                    <input type="hidden" id="placeid" name="placeid" />
-                    <input type="submit" value="Rechercher" />
+                    <input id="search_btn" type="submit" value="Rechercher" />
                     <select id="places_values">
-                        <option value="/acores">Açores</option>
-                        <option value="/afrique-du-sud">Afrique du sud</option>
-                        <option value="/albanie">Albanie</option>
-                        <option value="/argentine">Argentine</option>
-                        <option value="/armenie">Arménie</option>
-                        <option value="/australie">Australie</option>
-                        <option value="/autriche">Autriche</option>
-                        <option value="/azerbaidjan">Azerbaïdjan</option>
-                        <option value="/bangladesh">Bangladesh</option>
-                        <option value="/belize">Belize</option>
-                        <option value="/benin">Bénin</option>
-                        <option value="/bhoutan">Bhoutan</option>
-                        <option value="/birmanie">Birmanie</option>
-                        <option value="/bolivie">Bolivie</option>
-                        <option value="/botswana">Botswana</option>
-                        <option value="/bresil">Brésil</option>
-                        <option value="/bulgarie">Bulgarie</option>
-                        <option value="/burkina-faso">Burkina Faso</option>
-                        <option value="/cambodge">Cambodge</option>
-                        <option value="/cameroun">Cameroun</option>
-                        <option value="/canada">Canada</option>
-                        <option value="/chili">Chili</option>
-                        <option value="/chine">Chine</option>
-                        <option value="/colombie">Colombie</option>
-                        <option value="/congo">Congo</option>
-                        <option value="/coree-du-sud">Corée du Sud</option>
-                        <option value="/corse">Corse</option>
-                        <option value="/costa-rica">Costa Rica</option>
-                        <option value="/croatie">Croatie</option>
-                        <option value="/cuba">Cuba</option>
-                        <option value="/danemark">Danemark</option>
-                        <option value="/ecosse">Ecosse</option>
-                        <option value="/egypte">Egypte</option>
-                        <option value="/equateur">Equateur</option>
-                        <option value="/estonie">Estonie</option>
-                        <option value="/etats-unis">Etats-Unis</option>
-                        <option value="/ethiopie">Ethiopie</option>
-                        <option value="/finlande">Finlande</option>
-                        <option value="/france">France</option>
-                        <option value="/georgie">Géorgie</option>
-                        <option value="/ghana">Ghana</option>
-                        <option value="/grece">Grèce</option>
-                        <option value="/groenland">Groenland</option>
-                        <option value="/guadeloupe">Guadeloupe</option>
-                        <option value="/guatemala">Guatemala</option>
-                        <option value="/guyane">Guyane</option>
-                        <option value="/hawai">Hawaï</option>
-                        <option value="/hongrie">Hongrie</option>
-                        <option value="/ile-maurice">Île Maurice</option>
-                        <option value="/iles-canaries">Iles Canaries</option>
-                        <option value="/inde">Inde</option>
-                        <option value="/indonesie">Indonésie</option>
-                        <option value="/irlande">Irlande</option>
-                        <option value="/islande">Islande</option>
-                        <option value="/israel">Israël</option>
-                        <option value="/jamaique">Jamaïque</option>
-                        <option value="/jordanie">Jordanie</option>
-                        <option value="/kazakhstan">Kazakhstan</option>
-                        <option value="/kenya">Kenya</option>
-                        <option value="/kirghizistan">Kirghizistan</option>
-                        <option value="/laos">Laos</option>
-                        <option value="/lettonie">Lettonie</option>
-                        <option value="/liban">Liban</option>
-                        <option value="/lituanie">Lituanie</option>
-                        <option value="/madagascar">Madagascar</option>
-                        <option value="/madere">Madère</option>
-                        <option value="/maldives">Maldives</option>
-                        <option value="/maroc">Maroc</option>
-                        <option value="/mayotte">Mayotte</option>
-                        <option value="/mexique">Mexique</option>
-                        <option value="/moldavie">Moldavie</option>
-                        <option value="/mongolie">Mongolie</option>
-                        <option value="/montenegro">Montenegro</option>
-                        <option value="/mozambique">Mozambique</option>
-                        <option value="/namibie">Namibie</option>
-                        <option value="/nepal">Népal</option>
-                        <option value="/nicaragua">Nicaragua</option>
-                        <option value="/norvege">Norvège</option>
-                        <option value="/nouvelle-caledonie">Nouvelle Calédonie</option>
-                        <option value="/nouvelle-zelande">Nouvelle Zélande</option>
-                        <option value="/oman">Oman</option>
-                        <option value="/ouzbekistan">Ouzbekistan</option>
-                        <option value="/panama">Panama</option>
-                        <option value="/perou">Pérou</option>
-                        <option value="/philippines">Philippines</option>
-                        <option value="/pologne">Pologne</option>
-                        <option value="/polynesie-francaise">Polynésie Francaise</option>
-                        <option value="/portugal">Portugal</option>
-                        <option value="/republique-tcheque">République Tchèque</option>
-                        <option value="/reunion">Réunion</option>
-                        <option value="/rodrigues">Rodrigues</option>
-                        <option value="/roumanie">Roumanie</option>
-                        <option value="/russie">Russie</option>
-                        <option value="/rwanda">Rwanda</option>
-                        <option value="/salvador">Salvador</option>
-                        <option value="/seychelles">Seychelles</option>
-                        <option value="/sicile">Sicile</option>
-                        <option value="/slovaquie">Slovaquie</option>
-                        <option value="/slovenie">Slovénie</option>
-                        <option value="/sri-lanka">Sri Lanka</option>
-                        <option value="/suede">Suède</option>
-                        <option value="/suisse">Suisse</option>
-                        <option value="/tadjikistan">Tadjikistan</option>
-                        <option value="/tanzanie">Tanzanie</option>
-                        <option value="/thailande">Thaïlande</option>
-                        <option value="/tibet">Tibet</option>
-                        <option value="/togo">Togo</option>
-                        <option value="/tunisie">Tunisie</option>
-                        <option value="/turkmenistan">Turkmenistan</option>
-                        <option value="/turquie">Turquie</option>
-                        <option value="/ukraine">Ukraine</option>
-                        <option value="/uruguay">Uruguay</option>
-                        <option value="/venezuela">Venezuela</option>
-                        <option value="/vietnam">Vietnam</option>
-                        <option value="/zanzibar">Zanzibar</option>
+                        <?php foreach($this->countries as $country): ?>
+                            <option value="<?= $country->getComputername() ?>"><?= $country->getName() ?></option>
+                        <?php endforeach; ?>
                     </select>
                 </form>
             </div>
